# unspsc-classification

./: .env  .gitignore  .~lock.output.csv#  README.md  chat.py  config.py  csv_to_db.py  logger.py  main.py  pinecone_store.py  pyproject.toml  requirements.txt  script_cleaning.py  script_csv_to_parquet.py  script_parquet.py  simple_csv_rag_with_llamaindex.ipynb  unspsc_finder.py
old/: hierarchial_finder.ipynb  main.ipynb  pinecone_store.py  simple_csv_rag_with_llamaindex.ipynb
scripts/: script_cleaning.py  script_csv_to_parquet.py  script_main_process.py  script_parquet.py
