[project]
name = "kamran"
    version = "0.1.0"
    description = "A project designed to classify UNSPSC based on user-provided input data."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "annotated-types==0.7.0",
    "anyio==4.9.0",
    "build==1.2.2.post1",
    "certifi==2025.1.31",
    "charset-normalizer==3.4.1",
    "chroma-hnswlib==0.7.6",
    "click==8.1.8",
    "distro==1.9.0",
    "faiss-cpu==1.10.0",
    "fastexcel==0.13.0",
    "filelock==3.18.0",
    "fsspec==2025.3.0",
    "groq==0.19.0",
    "h11==0.14.0",
    "httpcore==1.0.7",
    "httpx==0.28.1",
    "huggingface-hub==0.29.3",
    "idna==3.10",
    "jinja2==3.1.6",
    "joblib==1.4.2",
    "markupsafe==3.0.2",
    "mpmath==1.3.0",
    "networkx==3.4.2",
    "numpy==2.2.4",
    "nvidia-cublas-cu12==12.4.5.8",
    "nvidia-cuda-cupti-cu12==12.4.127",
    "nvidia-cuda-nvrtc-cu12==12.4.127",
    "nvidia-cuda-runtime-cu12==12.4.127",
    "nvidia-cudnn-cu12==9.1.0.70",
    "nvidia-cufft-cu12==11.2.1.3",
    "nvidia-curand-cu12==10.3.5.147",
    "nvidia-cusolver-cu12==11.6.1.9",
    "nvidia-cusparse-cu12==12.3.1.170",
    "nvidia-cusparselt-cu12==0.6.2",
    "nvidia-nccl-cu12==2.21.5",
    "nvidia-nvjitlink-cu12==12.4.127",
    "nvidia-nvtx-cu12==12.4.127",
    "packaging==24.2",
    "pillow==11.1.0",
    "pip-tools==7.4.1",
    "polars==1.25.2",
    "pyarrow==19.0.1",
    "pydantic==2.10.6",
    "pydantic-core==2.27.2",
    "pyproject-hooks==1.2.0",
    "pyyaml==6.0.2",
    "regex==2024.11.6",
    "requests==2.32.3",
    "safetensors==0.5.3",
    "scikit-learn==1.6.1",
    "scipy==1.15.2",
    "sentence-transformers==3.4.1",
    "setuptools==76.0.0",
    "sniffio==1.3.1",
    "sympy==1.13.1",
    "threadpoolctl==3.6.0",
    "tokenizers==0.21.1",
    "torch==2.6.0",
    "tqdm==4.67.1",
    "transformers==4.49.0",
    "triton==3.2.0",
    "typing-extensions==4.12.2",
    "urllib3==2.3.0",
    "wheel==0.45.1",
]
